--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 @font-face {
     font-family: 'Android';
-    src: url('../fontes/idroid.otf' ) format('opentype');
+    src: url("./fontes/idroid.otf" ) format("opentype");
     font-weight: normal;
 }
 
